@@ -48,5 +48,6 @@
   pipes
 - remove unused files from vm/nga-c
 - new example: vocabulary.retro
+- remove need to lookup & call err:notfound by nga-c
 
 ================================================================
